# $Id$

2009-04-01	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php:
	reference-enabled directory storage with symbolic links (even
	recursive). See test/main/EntityProtoConvertersTest.class.php for
	example of usage.

2009-03-28	Evgeniy N. Sokolov

	* core/Form/Form.class.php: getWrongLabel() and getMissingLabel()
	added.

2009-03-27	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php: simple
	directory service helpers based on a local filesystem. Can be used for
	easy object configuration management, just like an LDAP.

2009-03-27	Sergey S. Sergeev

	* main/UnifiedContainer/UnifiedContainerWorker.class.php: drop limit and
	offset in count query fixed.

2009-03-26	Denis M. Gabaidulin

	* core/DB/MySql dialects classes: quote integers values too.	

2009-03-26	Vladlen Y. Koshelev

	* core/Base/Singleton.class.php: instantiation of classes with two or more
	constructor arguments fixed, related tests added.

2009-03-25	Vladlen Y. Koshelev

	* main/Application/ApplicationUrl.class.php: cleanHref() added for building
	urls using current navigation schema but without navigation scope.

2009-03-25	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveNoValue.class.php. Special primitive
	w/o value.

	* main/Utils/CommandLine/ArgumentParser.class.php. Refactor. Drop special
	collection and use only native form.

2009-03-24	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveDate.class.php: fixed import of empty values.

	* core/FormPrimitivesDateTest.class.php: useful tests added.

2009-03-24	Denis M. Gabaidulin

	* main/Utils/ArrayUtils.class.php: isEmpty(). Check for assoc
	single dimension array.

2009-03-23	Denis M. Gabaidulin

	* main/Utils/CommandLine/ArgumentBuilder.class.php. Simple builder to hide
	complex interface.
