@@ -150,6 +150,9 @@
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Mobile'.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'CommandLine'.PATH_SEPARATOR
 		
+		.ONPHP_MAIN_PATH.'Messages'		.PATH_SEPARATOR
+		.ONPHP_MAIN_PATH.'Messages'.DIRECTORY_SEPARATOR.'Interface'.PATH_SEPARATOR
+
 		.ONPHP_MAIN_PATH.'Application'	.PATH_SEPARATOR
 		
 		.ONPHP_META_CLASSES.PATH_SEPARATOR
